gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test20565.d
version https://git-lfs.github.com/spec/v1
oid sha256:95f16e62ebb291a0a24cf8fdf9373bc8720ea9e4b1160a8ecd11d46f16ee5d63
size 361
